src/test/scala/wacc/wacc_examples/invalid/syntaxErr/annotations/annotationTypo.wacc
# unknwown annotation

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    @tail_rec # this is a typo
    int sumToFive(int x) is
        if x == 5
        then return x
        else
            int y = call sumToFive(x + 1) ;
            return y 
        fi
    end
    int x = call sumToFive(0) ;
    exit x    
end